--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,22 @@ readme = "README.md"
 python = "^3.9"
 
 
+[tool.poetry.group.dev.dependencies]
+pylint = "^3.3.2"
+black = "^24.10.0"
+isort = "^5.13.2"
+flake8 = "^7.1.1"
+pre-commit = "^4.0.1"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+
+[tool.black]
+line-length = 99
+target-version = ["py39"]
+
+[tool.isort]
+profile = "black"
+line_length = 88
