--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.9"
+black = {extras = ["jupyter"], version = "^24.10.0"}
 
 
 [tool.poetry.group.dev.dependencies]
@@ -22,7 +23,7 @@ build-backend = "poetry.core.masonry.api"
 
 
 [tool.black]
-line-length = 99
+line-length = 88
 target-version = ["py39"]
 
 [tool.isort]
