--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.9"
 black = {extras = ["jupyter"], version = "^24.10.0"}
+ipykernel = "^6.29.5"
 
 
 [tool.poetry.group.dev.dependencies]
