--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -11,7 +11,11 @@ repos:
     rev: 7.1.1
     hooks:
       - id: flake8
-  - repo: https://github.com/pre-commit/mirrors-pylint
-    rev: v3.0.0a5
+  - repo: local
     hooks:
       - id: pylint
+        name: pylint
+        entry: poetry run pylint
+        language: system
+        files: \.py$
+        exclude: \.venv/
