--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ readme = "README.md"
 python = "^3.9"
 black = {extras = ["jupyter"], version = "^24.10.0"}
 ipykernel = "^6.29.5"
+pandas = "^2.2.3"
 
 
 [tool.poetry.group.dev.dependencies]
